# Babar

./: .gitignore
.github/workflows/: ci.yml
memory-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
memory-service/auth/: jwt_utils.py  oidc.py  tenant_isolation.py
memory-service/consolidation/: cron.py  decay.py  merger.py  worker.py
memory-service/context_builder/: linearizer.py
memory-service/feedback/: corrections.py
memory-service/ingestion/: coref_resolver.py  extractor.py  validator.py
memory-service/interface/: api_rest.py  app_api.py  mcp_server.py  openai_action.py
memory-service/interface/common/: schemas.py  service.py
memory-service/observability/: tracing.py
memory-service/retrieval/: entity_linker.py  graph_walker.py  scorer.py  vector_search.py
memory-service/storage/: buffer_store.py  db.py  graph_store.py  redis_client.py  vector_store.py
memory-service/storage/migrations/: 0001_init.sql  0002_importance_updated_at.sql  0003_recall_log.sql
memory-service/tests/: conftest.py  test_adapters.py  test_app_api.py  test_corrections.py  test_cron.py  test_entity_cache.py  test_graph_store.py  test_graph_walker.py  test_health.py  test_ingest_flow.py  test_ingestion.py  test_jwt.py  test_linearizer.py  test_mcp.py  test_mcp_transport.py  test_oidc.py  test_recall_flow.py  test_scorer.py  test_tenant_isolation.py  test_tracing.py  test_vector_store.py
memory-service/tests/memory_regression/: test_stable_facts_survive.py
